
	* major rewrite of character and color handling

	* joined header files together to akfavatar.h

	* akfavatar.h, avatar.c (avt_clear_screen):
	new function

	* akfavatar.h, avatar.c (avt_clear_eol):
	new function

	* akfavatar.h, avatar.c 
	(avt_set_text_color, avt_set_text_background_color):
	new functions

	* avatar.pas (TextColor, TextBackground, ClrEol):
	new functions

	* avatar.c (avt_wait_key):
	fix: message gets cleared again

	* renamed library to libakfavatar

	* avatar.pas (Initialize):
	don't close input/output (fixes problem under Windows)

	* avatar.c (avt_new_line, avt_say, avt_ask):
	a new line doesn't enforce a new page yet, only actually trying
	to print something outside the area does
	
	* gpcavatar, fpcavatar:
	define the symbol AKFAvatar
	
	* avatar.pas (initializeAvatar):
	use "AKFAvatar" as title and icon name

2007-08-20  Andreas K. Foerster  <info@akfoerster.de>

	* version 0.12 released
	migration to Savannah
	
	* renamed documentation to akfavatar-en.texinfo

        * akfavatar.xpm, regicon.c:
	new icon

	* avatar.h (avt_default): prototype added
	avatarsay.c: prototype avt_default removed

2007-08-18  Andreas K. Foerster  <info@akfoerster.de>

	* version 0.11 released

	* avatar.c (avt_say):
	ignore a BOM and derived forms

	* avatarsay.c (check_bom): new function
	(processfile): use check_bom

	* avatarsay.c (process_line_end, processfile):
	support for \r\n as line ending

	* avatarsay.c (main):
	changed option list (SDL-hack needed for Windows)

	* avatar.c (avt_toggle_fullscreen):
	new method to toggle the fullscreen mode
	(should also work on Windows?)

	* avatarsay.c (iscommand, handle_backgoundcolor_command):
	new command: .backgroundcolor

2007-08-11  Andreas K. Foerster  <info@akfoerster.de>

	* version 0.10 released

	* avatar.c avatar.h (avt_set_background_color):
	new function

	* avatar.c [OLD_SDL] (_avt_iconv):
	new function: imitates SDL_iconv () for old SDL versions

	* avatar.c, avatar.h: